kubernetes/3-application/2-Application-deployment/2-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: prom-grafana
          image: ramanujd/prom-grafana
          ports:
            - containerPort: 8080
