kubernetes/3-application/2-Application-deployment/3-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: app
  labels:
    app: app-svc
spec:
  ports:
    - port: 8080
  selector:
    app: app
